# obs-mcp

./: .gitignore  CLAUDE.md  README.md  main.py  obs-mcp.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: sdk_doc.txt
docs/protocol_split/: config.json  enums.json  events.json  filters.json  general.json  inputs.json  media_inputs.json  outputs.json  record.json  scene_items.json  scenes.json  sources.json  stream.json  transitions.json  ui.json
obs_mcp/: __init__.py  client.py  general.py  scene_items.py  scenes.py  server.py  sources.py  streaming.py  transitions.py
py_src/: __init__.py  scenes.py  transitions.py
scripts/: split_docs.py
src/: client.ts  index.test.ts  index.ts  server.ts
src/tools/: config.ts  filters.ts  general.ts  index.ts  inputs.ts  media-inputs.ts  outputs.ts  record.ts  scene-items.ts  scenes.ts  sources.ts  streaming.ts  transitions.ts  ui.ts
