[project]
name = "obs-mcp"
version = "0.1.0"
description = "OBS Studio MCP Server - Control OBS via MCP tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "ruff>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]